--- a/src/components/sass/Hamburger.style.scss
+++ b/src/components/sass/Hamburger.style.scss
@@ -18,6 +18,16 @@
     background-color: rgb(255, 255, 255);
 }
 
+.hamburger_container{
+    width: 50px;
+    height: 50px;
+
+    margin-top: -10px;
+
+    @include flex;
+    // background-color: yellow;
+}
+
 .hamburgerMenu{
     
     position: relative;
