--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,3 +13,10 @@
 .highlight {
     color: $theme-color;
 }
+
+.title_text {
+    font-size: 7rem;
+    font-weight: 900;
+
+    margin-bottom: 10px;
+}
