--- a/src/scss/home.style.scss
+++ b/src/scss/home.style.scss
@@ -37,17 +37,12 @@
     height: 100vh;
     position: relative;
     z-index: -1;
-
-    // background-color: black;
-    // @include flex(space-between, space-between);
-    // flex-direction: column;
-
     position: absolute;
-    top: 150px;
+    top: 350px;
+    // background-color: aquamarine;
 
-    // flex-grow: 1;
-
-    @include flex(center, flex-start);
+    @include flex(flex-start, flex-start);
+    gap: 200px;
     flex-direction: column;
     
     .subtitle {
@@ -74,7 +69,7 @@
 
 &__work{
 
-    margin-top: 40px;
+    margin-top: 20px;
 
     p{  
 
