homepage without thankyou

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -8,6 +8,7 @@
 @import "../components/sass/ScrollBar.style.scss";
 @import "../components/sass/Hamburger.style.scss";
 @import "../components/sass/Heading.style.scss";
+@import "../components/sass/ThankYou.style.scss";
 
 
 .highlight {
