--- a/src/scss/home.style.scss
+++ b/src/scss/home.style.scss
@@ -1,5 +1,6 @@
 .home{
     @include flex(center,flex-start);
+    flex-direction: column;
     width: 100vw;
     height: 100vh;
 
@@ -73,8 +74,15 @@
 
 &__work{
     opacity: 0;
+    // transform: rotateX(180deg); 
 
 }
+
+&__early{
+    opacity: 0;
+    transform: rotateX(180deg);   
+}
+
 
 p{   
     
