--- a/src/components/sass/ThankYou.style.scss
+++ b/src/components/sass/ThankYou.style.scss
@@ -1,8 +1,5 @@
 .home__thanks{
-    width: 100vw;
-    height: 100vh;
-
-    // background-color: $background-color;
-
-    background-color: aliceblue;
+    padding-bottom: 280px;
+    // background-color: aqua;
+    opacity: 0;
 }
