--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,11 @@ p{
   margin-bottom: 10px;
 }
 
+a {
+  text-decoration: none;
+  color: white;  
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 6px;
