home pace image blocks

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -9,7 +9,7 @@
 @import "../components/sass/Hamburger.style.scss";
 @import "../components/sass/Heading.style.scss";
 @import "../components/sass/ThankYou.style.scss";
-
+@import "../components/sass/shared/HomePicBlock.style.scss";
 
 .highlight {
     color: $theme-color;
