--- a/src/components/sass/ThankYou.style.scss
+++ b/src/components/sass/ThankYou.style.scss
@@ -1,9 +1,19 @@
 .home__thanks{
-    padding-bottom: 30px;
+    padding-bottom: 230px;
     opacity: 0;
-
+    
     @media (min-width: $mobile-view){
-        transform: translate(-85%, -20%);
+        width: 90vw;
+        transform: translate(-48%, -20%);
+        padding-bottom: 20%;
+
+
+    }
+    
+    @media (min-height: $tablet-view){
+        
+        transform: translate(-45%, -20%);
+        padding-bottom: 100%;
     }
 
     &_contact{
