--- a/src/scss/home.style.scss
+++ b/src/scss/home.style.scss
@@ -66,7 +66,7 @@
     @media (min-width: $mobile-view){
         width: 50%;
         right: 60px;
-        top: 290px;
+        top: 50%;
     }
 
     
