--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,6 +1,8 @@
 $theme-color: #8FA7DF;
-$background-color: #0A0C13;
+$background-color: rgb(10, 12, 19);
 $submerge-color : #1A2539;
 $tablet-view: 1366px;
 $mobile-view: 650px;
 
+
+$header-height: 55px;
