--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,4 +1,4 @@
-$theme-color: #8FA7DF;
+$theme-color: rgb(143, 167, 223);
 $background-color: rgb(10, 12, 19);
 $submerge-color : #1A2539;
 $tablet-view: 1366px;
@@ -6,3 +6,6 @@ $mobile-view: 650px;
 
 
 $header-height: 55px;
+
+$hk_theme: #993762;
+$emo_theme: #048C5C;
