all main projects added

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -26,6 +26,10 @@
     color: $emo_theme;
 }
 
+.highlight_drm {
+    color: $drm_theme;
+}
+
 .title_text {
     font-size: 7rem;
     font-weight: 900;
