--- a/src/components/sass/shared/ProjecInfo.scss
+++ b/src/components/sass/shared/ProjecInfo.scss
@@ -7,8 +7,8 @@ $hk: #993762;
     background-color: $background-color;
     // background-color: antiquewhite;
     z-index: 10;
-    clip-path: circle(0% at 120% 80%);
-    transition: clip-path 1s ease-in-out;
+    clip-path: circle(0% at -0% 0%);
+    transition: clip-path 1.5s ease-in-out;
 
    &__info{
        @media (min-width: $mobile-view){
@@ -20,11 +20,19 @@ $hk: #993762;
     &__container{
         height: 100%;
         width: 100%;
-        background-position-x: 50% !important;
-        background-position-y: 300px !important;
-       @media (min-width: $mobile-view){
-        background-position-x: 0% !important;
-        background-position-y: 0px !important;
+    }
+
+    &__background{
+        visibility: hidden;
+        position: absolute;
+        background-repeat: no-repeat !important;
+        @media (min-width: $mobile-view){
+        background-size: contain;
+        visibility: visible;
+        height: 100vh;
+        width: 35%;
+        // background-position-x: 0% !important;
+        // background-position-y: 0px !important;
        }
     }
     
@@ -33,12 +41,13 @@ $hk: #993762;
         position: absolute;
         top: 15px;
         right: 15px;
+        cursor: pointer;
     }
 
     &__title{
         font-size: 2.5rem;
-        text-align: center;
-        padding: 60px 0 20px 0;
+        // text-align: left;
+        padding: 60px 25px 20px 25px;
     }
 
     &__desc{
