--- a/src/components/sass/shared/WorkHolder.scss
+++ b/src/components/sass/shared/WorkHolder.scss
@@ -1,8 +1,17 @@
+
 .workHolder{
+
+
+
     &__container{
         width: 100vw;
-        padding: 30px;
+        padding: 30px 0;
         @include flex(space-between);
+        cursor: pointer;
+        margin: 15px 0;
+        @media (min-width: $mobile-view){
+            width: 800px;
+        }
 
     }
 
@@ -15,10 +24,9 @@
         }
     }
     &_info{
-     width: 60%;
         // background-color: antiquewhite;
-
-
+        flex-grow: 1;
+        margin-left: 30px;
         &_title{
             font-size: 3rem;
             font-weight: bold;
