--- a/src/components/sass/shared/ProjecInfo.scss
+++ b/src/components/sass/shared/ProjecInfo.scss
@@ -6,7 +6,7 @@ $hk: #993762;
     position: fixed;
     background-color: $background-color;
     // background-color: antiquewhite;
-    z-index: 10;
+    z-index: 200;
     clip-path: circle(0% at -0% 0%);
     transition: clip-path 1.5s ease-in-out;
 
@@ -27,7 +27,7 @@ $hk: #993762;
         position: absolute;
         background-repeat: no-repeat !important;
         @media (min-width: $mobile-view){
-        background-size: contain;
+        background-size: cover;
         visibility: visible;
         height: 100vh;
         width: 35%;
