--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,8 @@ html {
 body{
   background-color: $background-color;
   color: white;
-  height: 100%;;
+  height: 100%;
+  font-size: 1.5rem;
 }
 
 button {
