dijkastra and evolution added

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,12 +1,11 @@
 $theme-color: rgb(143, 167, 223);
 $background-color: rgb(10, 12, 19);
-$submerge-color : #1A2539;
+$submerge-color: #1a2539;
 $tablet-view: 1366px;
 $mobile-view: 650px;
 
-
 $header-height: 55px;
 
-$hk_theme: #993762;
-$emo_theme: #048C5C;
+$hk_theme: #4e9aba;
+$emo_theme: #f82933;
 $drm_theme: #047089;
